# openfpv

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
cli/: __init__.py  compat.py
docs/: rules.md  schema.md
examples/: parts.min.json  run_demo.sh
openfpv_compat/: __init__.py  engine.py  schema.py  summarize.py
workflows/: ci.yml
